NXP-29920: Rework ConfigurationGenerator creation & tests